# TextGAN-Researcher

./: main.py  pyproject.toml  requirements.txt  setup.py  test_api.py
api/: config.py  example_client.py  main.py  run_api.py
example/: __init__.py  usage_example.py
src/agents/: __init__.py  deep_research_agent.py  textgan_agents.py
src/models/: __init__.py  base_models.py  execution_state.py
src/tools/: __init__.py  analysis_tools.py  base_tools.py  content_tools.py  knowledge_tools.py  search_tools.py
src/utils/: helpers.py
