# uv pip compile pyproject.toml -o requirements.txt
[project]
name = "textgan-researcher"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[all]>=0.116.1",
    "httpx>=0.28.1",
    "langchain>=0.3.26",
    "langchain-openai>=0.3.27",
    "langchainhub>=0.1.21",
    "openai>=1.95.1",
    "pydantic-settings>=2.10.1",
    "python-dateutil>=2.9.0.post0",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "ruff>=0.12.3",
]
